[package]
name = "proxy-autologin"
version = "0.1.1"
authors = ["Shabanov Anton <snakesolid@ngs.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
cron = "0.6"
env_logger = "0.7"
log = "0.4"
structopt = "0.3"

[dependencies.reqwest]
version = "0.10"
features = [ "blocking" ]
